--- a/basic_calculation/homepage/index.html
+++ b/basic_calculation/homepage/index.html
@@ -62,7 +62,9 @@
 									<p>サービスをより快適にご利用いただくために、個人を特定できる特定の情報の提供をお願いすることがあります。私が要求する情報は、お客様のデバイスに保持され、私が何らかの形で収集することはありません。
 									<br>本アプリでは、お客様を特定するために使用される情報を収集する可能性のある第三者サービスを使用しています。</p>
 									<p>本アプリが使用する第三者サービスプロバイダーのプライバシーポリシーへのリンク</p>
-									<p>Google Playサービスのりんく</p>
+									
+									<a href="https://policies.google.com/privacy">
+									Google Playサービス</a>
 								</div>
 							</section>
 
